--- a/bcellm7.html
+++ b/bcellm7.html
@@ -10,6 +10,12 @@
     transition: 0.3s;
   }
 
+  #logo{ 
+	position:fixed; 
+	top:15; 
+	left:0; 
+  } 
+
   button {
     display: block
   }
@@ -94,7 +100,7 @@
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         //.nodeAutoColorBy('group')
-        .linkDirectionalArrowLength(3.5)
+        .linkDirectionalArrowLength(8)
         .linkDirectionalArrowRelPos(1)
         .linkWidth(1)
         .linkColor(() => 'rgb(0,0,0)')
@@ -166,4 +172,10 @@
       return obj;
   }
   </script>
+
+<div id="logo"> 
+	<img src="logo.png" width="400"> 
+</div> 
+
+
 </body>
