--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     display: block
   }
 
+  #logo{ 
+	position:fixed; 
+	top:15; 
+	left:0; 
+  } 
 
   .button1{
     background-color: #B1C1C0;
@@ -94,7 +99,7 @@
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         //.nodeAutoColorBy('group')
-        .linkDirectionalArrowLength(3.5)
+        .linkDirectionalArrowLength(4)
         .linkDirectionalArrowRelPos(1)
         .linkWidth(1)
         .linkColor(() => 'rgb(150,150,150)')
@@ -149,13 +154,9 @@
 
       return obj;
   }
-  </script>
-
-<div class="dg ac">
-  <div class="dg main a" style="position: absolute;" onclick="window.location.href='index.html'"> 
-    <img src="logo.png" alt="COVID Omics 3D Vizualization" style="width: 250px; margin-top: 10px;" >
-    
-  </div>
-</div>
+</script>
+<div id="logo"> 
+	<img src="logo.png" width="400"> 
+</div> 
 
 </body>
