--- a/nkm13.html
+++ b/nkm13.html
@@ -14,6 +14,11 @@
     display: block
   }
 
+  #logo{ 
+	position:fixed; 
+	top:15; 
+	left:0; 
+  } 
 
   .button1:hover{
     background-color: #B1C1C0;
@@ -94,7 +99,7 @@
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         //.nodeAutoColorBy('group')
-        .linkDirectionalArrowLength(3.5)
+        .linkDirectionalArrowLength(8)
         .linkDirectionalArrowRelPos(1)
         .linkWidth(1)
         .linkColor(() => 'rgb(0,0,0)')
@@ -166,4 +171,9 @@
       return obj;
   }
   </script>
+
+<div id="logo"> 
+	<img src="logo.png" width="400"> 
+</div> 
+
 </body>
