--- a/bcellm7.html
+++ b/bcellm7.html
@@ -16,18 +16,22 @@
 	left:0; 
   } 
 
+  #legend{
+    position: fixed;
+    top: 420;
+    left:17;
+  }
+
   button {
     display: block
   }
 
-
-  .button1:hover{
+  .button1{
     background-color: #B1C1C0;
     color: white; 
-    outline: 2px solid black;
   } 
 
-  .button2:hover {
+  .button2 {
     background-color: #AB3428;
     color: white;
   }
@@ -35,20 +39,51 @@
   .button3 {
     background-color: #FF8C42;
     color: white;
+    outline: 3px solid black;
   }
 
-  .button4:hover {
+  .button4 {
     background-color: #036D19;
     color: white;
   }
 
-  .button5:hover {
+  .button5 {
     background-color: #475AFF;
     color: white;
   }
 
-  .button6:hover {
+  .button6 {
     background-color: #2E294E;
+    color: white;
+  }
+
+  .button1:hover {
+    background-color: #e1e1e1;
+    color: black; 
+  } 
+
+  .button2:hover {
+    background-color: #ca675e;
+    color: white;
+  }
+
+  .button3:hover {
+    background-color: #e6a882;
+    color: white;
+  }
+
+  .button4:hover {
+    background-color: #529f61;
+    color: white;
+  }
+
+  .button5:hover {
+    background-color: #8890dc;
+    color: white;
+  }
+
+  .button6:hover {
+    background-color: #7067a7;
     color: white;
   }
 
@@ -118,7 +153,8 @@
             3000  // ms transition duration
           );
         });
-
+  
+  Graph.d3Force('link').distance(80);  
 
   function colorNodes(node) {
 
@@ -175,6 +211,10 @@
 
 <div id="logo"> 
 	<img src="logo.png" width="700"> 
+</div> 
+
+<div id="legend"> 
+  <img src="Legend.png" width="125"> 
 </div> 
 
 
