--- a/monom6.html
+++ b/monom6.html
@@ -20,18 +20,23 @@
 	left:0; 
   } 
 
-  .button1:hover{
+  #legend{
+    position: fixed;
+    top: 420;
+    left:17;
+  }
+
+  .button1{
     background-color: #B1C1C0;
     color: white; 
-    outline: 2px solid black;
   } 
 
-  .button2:hover {
+  .button2 {
     background-color: #AB3428;
     color: white;
   }
 
-  .button3:hover {
+  .button3 {
     background-color: #FF8C42;
     color: white;
   }
@@ -39,15 +44,46 @@
   .button4 {
     background-color: #036D19;
     color: white;
+    outline: 3px solid black;
   }
 
-  .button5:hover {
+  .button5 {
     background-color: #475AFF;
     color: white;
   }
 
-  .button6:hover {
+  .button6 {
     background-color: #2E294E;
+    color: white;
+  }
+
+  .button1:hover {
+    background-color: #e1e1e1;
+    color: black; 
+  } 
+
+  .button2:hover {
+    background-color: #ca675e;
+    color: white;
+  }
+
+  .button3:hover {
+    background-color: #e6a882;
+    color: white;
+  }
+
+  .button4:hover {
+    background-color: #529f61;
+    color: white;
+  }
+
+  .button5:hover {
+    background-color: #8890dc;
+    color: white;
+  }
+
+  .button6:hover {
+    background-color: #7067a7;
     color: white;
   }
 
@@ -174,6 +210,10 @@
 
 <div id="logo"> 
 	<img src="logo.png" width="700"> 
+</div> 
+
+<div id="legend"> 
+  <img src="Legend.png" width="125"> 
 </div> 
 
 </body>
