--- a/nkm4.html
+++ b/nkm4.html
@@ -46,6 +46,9 @@
 
 
   <script type="module">
+  
+  var loadTime = window.performance.timing.domContentLoadedEventEnd- window.performance.timing.navigationStart;
+  console.log(loadTime)
 
   const elem = document.getElementById('3d-graph');
     
