loadtime improvements by changing resolution and webgl parameters

--- a/index-v2.html
+++ b/index-v2.html
@@ -125,20 +125,20 @@
       const elem = document.getElementById('3d-graph');
   
       //const Graph = ForceGraph3D({rendererConfig: {precision: "lowp", powerPreference: "low-power"}})
-      const Graph = ForceGraph3D()
+      const Graph = ForceGraph3D({rendererConfig:{precision: "lowp", powerPreference: "high-performance",antialias: true, alpha: true }})
           .backgroundColor("#ffffff")
         (elem)
           .jsonUrl('complete_data_icave_format.json')
           .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
           .nodeThreeObject(node => colorNodes(node))
           //.nodeAutoColorBy('group')
-          .nodeResolution(3)
-          .linkResolution(3)
+          .nodeResolution(1)
+          .linkResolution(2)
           .linkMaterial('MeshBasicMaterial')
           .linkDirectionalArrowLength(4)
           .linkDirectionalArrowRelPos(1)
           .linkWidth(0.5)
-          .linkColor(() => 'rgb(150,150,150)')
+          .linkColor(() => 'rgb(110,110,110)')
           .linkOpacity(0.4)
           //.linkAutoColorBy('group')
           .onNodeHover(node => elem.style.cursor = node ? 'pointer' : null)
