--- a/bcellm7-v2.html
+++ b/bcellm7-v2.html
@@ -14,6 +14,7 @@
   <script src="//unpkg.com/three"></script>
   <link rel="stylesheet" href="styles.css">
   <script src="//unpkg.com/dat.gui"></script>
+  <script src="//unpkg.com/three-spritetext"></script>
 
   <!--<script src="../../dist/3d-force-graph.js"></script>-->
 </head>
@@ -125,7 +126,11 @@
             color: color //FFAE03
             //vertexColors: THREE.FaceColors,
           })
-            );  
+            ); 
+      const sprite = new SpriteText(node.id);
+      sprite.color = 'rgb(100,100,100)';
+      sprite.textHeight = 6;
+      obj.add(sprite); 
       return obj;
   }
 
