--- a/index-v2.html
+++ b/index-v2.html
@@ -240,6 +240,20 @@
         
   
       }
+
+      if (node.id == "STX3"
+      || node.id == "LYN"
+      || node.id == "MLL2"
+      || node.id == "NCOA2"
+      || node.id == "REPS2"
+      || node.id == "RP11-701P16.2")
+      {
+        color = '#bcbcbc'
+        //node.z = 100;
+        //node.fz = 100;
+        
+  
+      }
   
         obj = new THREE.Mesh(
                 new THREE.SphereGeometry(sphereSize),
