moving files around

--- a/bcellm7.html
+++ b/bcellm7.html
@@ -400,7 +400,7 @@
   const Graph = ForceGraph3D()
         .backgroundColor("#fff")
       (elem)
-        .jsonUrl('/data/final_data/BcellM7_final.json')
+        .jsonUrl('BcellM7_final.json')
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         .nodeResolution(3)
