--- a/monom6.html
+++ b/monom6.html
@@ -412,7 +412,7 @@
   const Graph = ForceGraph3D()
         .backgroundColor("#fff")
       (elem)
-        .jsonUrl('/data/final_data/MonoM6_final.json')
+        .jsonUrl('MonoM6_final.json')
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         .nodeResolution(3)
