--- a/nkm4.html
+++ b/nkm4.html
@@ -331,7 +331,7 @@
   const Graph = ForceGraph3D()
         .backgroundColor("#fff")
       (elem)
-        .jsonUrl('data/final_data/NKM4_final.json')
+        .jsonUrl('NKM4_final.json')
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         .linkDirectionalArrowLength(8)
