--- a/nkm9.html
+++ b/nkm9.html
@@ -470,7 +470,7 @@
   const Graph = ForceGraph3D()
         .backgroundColor("#fff")
       (elem)
-        .jsonUrl('/data/final_data/NKM9_final.json')
+        .jsonUrl('NKM9_final.json')
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         .nodeResolution(3)
