--- a/nkm13.html
+++ b/nkm13.html
@@ -410,7 +410,7 @@
   const Graph = ForceGraph3D()
         .backgroundColor("#fff")
       (elem)
-        .jsonUrl('/data/final_data/NKM13_final.json')
+        .jsonUrl('NKM13_final.json')
         .nodeLabel(node => (`<span style="color: black">${node.id}</span>`))
         .nodeThreeObject(node => colorNodes(node))
         .nodeResolution(3)
