--- a/nkm4.html
+++ b/nkm4.html
@@ -288,7 +288,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/CFSViz/css/styles.css">
 <script src="//unpkg.com/three-spritetext"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -528,11 +528,11 @@
   </script>
 
   <div id="logo" class="fixed-top">
-    <img src="img/logo.png" width="700"> 
+    <img src="/CFSViz/img/logo.png" width="700"> 
   </div>
 
     <div id="legend" class="position-fixed"> 
-      <img src="img/Legend.png" width="125"> 
+      <img src="/CFSViz/img/Legend.png" width="125"> 
     </div> 
 
 
