--- a/bcellm7.html
+++ b/bcellm7.html
@@ -1282,11 +1282,11 @@
   </script>
 
   <div id="logo" class="fixed-top">
-    <img src="/CFSVizimg/logo.png" width="700"> 
+    <img src="/CFSViz/img/logo.png" width="700"> 
   </div>
 
     <div id="legend" class="position-fixed"> 
-      <img src="/CFSVizimg/Legend.png" width="125"> 
+      <img src="/CFSViz/img/Legend.png" width="125"> 
     </div> 
 
 
