--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="//unpkg.com/three"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/CFSViz/css/styles.css">
   <script src="//unpkg.com/three-spritetext"></script>
 
 </head>
@@ -40,9 +40,6 @@
     </button>
     <button class="btn button6 d-block rounded-0" id="module5" onclick="window.location.href = 'nkm9.html'">
       NKM9
-    </button>
-    <button type="button" class="btn d-block rounded-0" data-toggle="modal" data-target="#modalTable">
-      Show data
     </button>
     
   </div>
@@ -232,7 +229,7 @@
 
 </script>
 <div id="logo"> 
-    <img src="img/logo.png" width="700"> 
+    <img src="/CFSViz/img/logo.png" width="700"> 
 </div> 
 
 </body>
